// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary for 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.50
  </h1>
</div>
`;

exports[`should render ExpenseSummary for multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling 
    $10.86
  </h1>
</div>
`;
